--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,39 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar">
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+      <div class="calendar-cell"></div>
+    </div>
   </body>
+  </div>
 </html>
