--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--start-day--sun
-    -calendar--month--lenth--29"> 
+    <div class="calendar calendar--start-day-sun calendar--month-length-29">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
@@ -41,4 +40,4 @@
       <div class="calendar__day"></div>
     </div>
   </body>
-</html>  
+</html>
