--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    
-    <div class="calendar calendar--start-day--mon calendar--month-length--31">
-      <div class="calendar-cell"></div>
+    <div class="calendar calendar--month-length-29 calendar--start-day-mon">
       <div class="calendar-cell"></div>
       <div class="calendar-cell"></div>
       <div class="calendar-cell"></div>
