--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <section class="calendar calendar--month-length--28">
-      <div class="calendar__day calendar__day--start-day--sun"></div>
+    <section class="
+      calendar
+      calendar--month-length--28
+      calendar--start-day--sun"
+    >
+      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
