--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="calendar">
-      <div class="calendar__days calendar--start-day-sun">
+      <div class="calendar calendar--month-length-31 calendar--start-day-sun">
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
