--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--month-length-31 calendar--start-day-mon">
+    <div
+      class="
+      calendar
+      calendar--start-day-sun
+      calendar--month-length-31
+      "
+    >
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
