--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,40 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="container">
+      <ul class="calendar">
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+        <li class="calendar-day"></li>
+      </ul>
+    </div>
   </body>
 </html>
