--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar-sheet">
+    <div class="calendar-sheet calendar-sheet--first-day--wed calendar-sheet--last-day--29">
       <div class="calendar-sheet__day"></div>
       <div class="calendar-sheet__day"></div>
       <div class="calendar-sheet__day"></div>
