--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,7 @@
   </head>
   <body>
 
-    <div
-    class="
-    calendar
-    calendar--start-day-wed
-    calendar--mouth-lenght-29
-    "
-    >
+    <div class="calendar calendar--start-day-wed calendar--mouth-lenght-29">
 
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
