--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,40 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <main>
+      <div class="calendar">
+        <div class="days days--1"></div>
+        <div class="days days--2"></div>
+        <div class="days days--3"></div>
+        <div class="days days--4"></div>
+        <div class="days days--5"></div>
+        <div class="days days--6"></div>
+        <div class="days days--7"></div>
+        <div class="days days--8"></div>
+        <div class="days days--9"></div>
+        <div class="days days--10"></div>
+        <div class="days days--11"></div>
+        <div class="days days--12"></div>
+        <div class="days days--13"></div>
+        <div class="days days--14"></div>
+        <div class="days days--15"></div>
+        <div class="days days--16"></div>
+        <div class="days days--17"></div>
+        <div class="days days--18"></div>
+        <div class="days days--19"></div>
+        <div class="days days--20"></div>
+        <div class="days days--21"></div>
+        <div class="days days--22"></div>
+        <div class="days days--23"></div>
+        <div class="days days--24"></div>
+        <div class="days days--25"></div>
+        <div class="days days--26"></div>
+        <div class="days days--27"></div>
+        <div class="days days--28"></div>
+        <div class="days days--29"></div>
+        <div class="days days--30"></div>
+        <div class="days days--31"></div>
+      </div>
+    </main>
   </body>
 </html>
