--- a/src/index.html
+++ b/src/index.html
@@ -7,39 +7,39 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <main>
-      <div class="calendar">
-        <div class="days days--1"></div>
-        <div class="days days--2"></div>
-        <div class="days days--3"></div>
-        <div class="days days--4"></div>
-        <div class="days days--5"></div>
-        <div class="days days--6"></div>
-        <div class="days days--7"></div>
-        <div class="days days--8"></div>
-        <div class="days days--9"></div>
-        <div class="days days--10"></div>
-        <div class="days days--11"></div>
-        <div class="days days--12"></div>
-        <div class="days days--13"></div>
-        <div class="days days--14"></div>
-        <div class="days days--15"></div>
-        <div class="days days--16"></div>
-        <div class="days days--17"></div>
-        <div class="days days--18"></div>
-        <div class="days days--19"></div>
-        <div class="days days--20"></div>
-        <div class="days days--21"></div>
-        <div class="days days--22"></div>
-        <div class="days days--23"></div>
-        <div class="days days--24"></div>
-        <div class="days days--25"></div>
-        <div class="days days--26"></div>
-        <div class="days days--27"></div>
-        <div class="days days--28"></div>
-        <div class="days days--29"></div>
-        <div class="days days--30"></div>
-        <div class="days days--31"></div>
+    <main class="main">
+      <div class="calendar calendar--start-day-sun calendar--month-length-31">
+        <div class="calendar__day calendar__day--1"></div>
+        <div class="calendar__day calendar__day--2"></div>
+        <div class="calendar__day calendar__day--3"></div>
+        <div class="calendar__day calendar__day--4"></div>
+        <div class="calendar__day calendar__day--5"></div>
+        <div class="calendar__day calendar__day--6"></div>
+        <div class="calendar__day calendar__day--7"></div>
+        <div class="calendar__day calendar__day--8"></div>
+        <div class="calendar__day calendar__day--9"></div>
+        <div class="calendar__day calendar__day--10"></div>
+        <div class="calendar__day calendar__day--11"></div>
+        <div class="calendar__day calendar__day--12"></div>
+        <div class="calendar__day calendar__day--13"></div>
+        <div class="calendar__day calendar__day--14"></div>
+        <div class="calendar__day calendar__day--15"></div>
+        <div class="calendar__day calendar__day--16"></div>
+        <div class="calendar__day calendar__day--17"></div>
+        <div class="calendar__day calendar__day--18"></div>
+        <div class="calendar__day calendar__day--19"></div>
+        <div class="calendar__day calendar__day--20"></div>
+        <div class="calendar__day calendar__day--21"></div>
+        <div class="calendar__day calendar__day--22"></div>
+        <div class="calendar__day calendar__day--23"></div>
+        <div class="calendar__day calendar__day--24"></div>
+        <div class="calendar__day calendar__day--25"></div>
+        <div class="calendar__day calendar__day--26"></div>
+        <div class="calendar__day calendar__day--27"></div>
+        <div class="calendar__day calendar__day--28"></div>
+        <div class="calendar__day calendar__day--29"></div>
+        <div class="calendar__day calendar__day--30"></div>
+        <div class="calendar__day calendar__day--31"></div>
       </div>
     </main>
   </body>
