--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
     <div
     class="calendar
     calendar--month-length-29
-    calendar--start-day-sun">
+    calendar--start-day-sun"
+    >
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
