--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,131 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+      <a
+        href="#"
+        class="calendar__day"
+      ></a>
+    </div>
   </body>
 </html>
