--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
     />
   </head>
   <body>
-    <div class="calendar">
-      <div class="calendar__day calendar__day--start-day--sun"></div>
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
+      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
