--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
         <div class="days"></div>
         <div class="days"></div>
         <div class="days"></div>
-        <!-- <div class="days"></div>
-        <div class="days"></div> -->
+        <div class="days"></div>
+        <div class="days"></div>
       </div>
     </div>
   </body>
