--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main class="container">
-      <div class="calendar calendar--start-day--mon calendar--month-length--31">
+      <div class="calendar calendar--start-day-sun calendar--month-length-31">
         <div class="calendar_day"></div>
         <div class="calendar_day"></div>
         <div class="calendar_day"></div>
