--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,11 @@
   <body class="page">
 
     <div class="container">
-      <section class="calendar">
-        <div class="calendar__day calendar__day--1"></div>
+      <section class="calendar calendar--month-length-31">
+        <div class="calendar__day
+                    calendar__day--1
+                    calendar__day--start-day-sun">
+        </div>
         <div class="calendar__day calendar__day--2"></div>
         <div class="calendar__day calendar__day--3"></div>
         <div class="calendar__day calendar__day--4"></div>
