--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,11 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="./styles/index.scss"
     />
   </head>
-  <body>
-    <div
-      class="calendar calendar--start-day--sunday calendar--month-length--31"
-    >
+  <body data-qa="calendar-body">
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
