--- a/src/index.html
+++ b/src/index.html
@@ -14,37 +14,37 @@
   </head>
   <body>
     <div class="calendar calendar--start-day-sun calendar--month-length-31">
-      <div class="calendar__cell calendar__cell--day--1"></div>
-      <div class="calendar__cell calendar__cell--day--2"></div>
-      <div class="calendar__cell calendar__cell--day--3"></div>
-      <div class="calendar__cell calendar__cell--day--4"></div>
-      <div class="calendar__cell calendar__cell--day--5"></div>
-      <div class="calendar__cell calendar__cell--day--6"></div>
-      <div class="calendar__cell calendar__cell--day--7"></div>
-      <div class="calendar__cell calendar__cell--day--8"></div>
-      <div class="calendar__cell calendar__cell--day--9"></div>
-      <div class="calendar__cell calendar__cell--day--10"></div>
-      <div class="calendar__cell calendar__cell--day--11"></div>
-      <div class="calendar__cell calendar__cell--day--12"></div>
-      <div class="calendar__cell calendar__cell--day--13"></div>
-      <div class="calendar__cell calendar__cell--day--14"></div>
-      <div class="calendar__cell calendar__cell--day--15"></div>
-      <div class="calendar__cell calendar__cell--day--16"></div>
-      <div class="calendar__cell calendar__cell--day--17"></div>
-      <div class="calendar__cell calendar__cell--day--18"></div>
-      <div class="calendar__cell calendar__cell--day--19"></div>
-      <div class="calendar__cell calendar__cell--day--20"></div>
-      <div class="calendar__cell calendar__cell--day--21"></div>
-      <div class="calendar__cell calendar__cell--day--22"></div>
-      <div class="calendar__cell calendar__cell--day--23"></div>
-      <div class="calendar__cell calendar__cell--day--24"></div>
-      <div class="calendar__cell calendar__cell--day--25"></div>
-      <div class="calendar__cell calendar__cell--day--26"></div>
-      <div class="calendar__cell calendar__cell--day--27"></div>
-      <div class="calendar__cell calendar__cell--day--28"></div>
-      <div class="calendar__cell calendar__cell--day--29"></div>
-      <div class="calendar__cell calendar__cell--day--30"></div>
-      <div class="calendar__cell calendar__cell--day--31"></div>
+      <div class="calendar__day calendar__day--1"></div>
+      <div class="calendar__day calendar__day--2"></div>
+      <div class="calendar__day calendar__day--3"></div>
+      <div class="calendar__day calendar__day--4"></div>
+      <div class="calendar__day calendar__day--5"></div>
+      <div class="calendar__day calendar__day--6"></div>
+      <div class="calendar__day calendar__day--7"></div>
+      <div class="calendar__day calendar__day--8"></div>
+      <div class="calendar__day calendar__day--9"></div>
+      <div class="calendar__day calendar__day--10"></div>
+      <div class="calendar__day calendar__day--11"></div>
+      <div class="calendar__day calendar__day--12"></div>
+      <div class="calendar__day calendar__day--13"></div>
+      <div class="calendar__day calendar__day--14"></div>
+      <div class="calendar__day calendar__day--15"></div>
+      <div class="calendar__day calendar__day--16"></div>
+      <div class="calendar__day calendar__day--17"></div>
+      <div class="calendar__day calendar__day--18"></div>
+      <div class="calendar__day calendar__day--19"></div>
+      <div class="calendar__day calendar__day--20"></div>
+      <div class="calendar__day calendar__day--21"></div>
+      <div class="calendar__day calendar__day--22"></div>
+      <div class="calendar__day calendar__day--23"></div>
+      <div class="calendar__day calendar__day--24"></div>
+      <div class="calendar__day calendar__day--25"></div>
+      <div class="calendar__day calendar__day--26"></div>
+      <div class="calendar__day calendar__day--27"></div>
+      <div class="calendar__day calendar__day--28"></div>
+      <div class="calendar__day calendar__day--29"></div>
+      <div class="calendar__day calendar__day--30"></div>
+      <div class="calendar__day calendar__day--31"></div>
     </div>
   </body>
 </html>
