--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <ul class="calendar">
+    <ul class="calendar calendar__start-day--sun calendar__start-day--month-length">
       <li class="calendar__item"></li>
 
       <li class="calendar__item"></li>
@@ -75,7 +75,7 @@
       <li class="calendar__item"></li>
 
       <li class="calendar__item"></li>
-      
+
     </ul>
   </body>
 </html>
