--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
     />
   </head>
   <body>
-    <ul class="calendar calendar__start-day--sun calendar__start-day--month-length">
+    <ul
+      class="calendar calendar__start-day--fri calendar__start-day--month-length"
+    >
       <li class="calendar__item"></li>
 
       <li class="calendar__item"></li>
@@ -75,7 +77,6 @@
       <li class="calendar__item"></li>
 
       <li class="calendar__item"></li>
-
     </ul>
   </body>
 </html>
