--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
     <title>Calendar</title>
   </head>
   <body>
-    <ul class="calendar calendar--start-day--sun calendar--month-length--31">
+    <ul class="calendar calendar--start-day--wed calendar--month-length--31">
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
