--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,7 @@
     />
   </head>
   <body>
-    <ul
-      class="calendar calendar__start-day--fri calendar__start-day--month-length"
-    >
+    <ul class="calendar calendar--start-day-sun calendar--month-length-31">
       <li class="calendar__item"></li>
 
       <li class="calendar__item"></li>
