--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <div class="calendar month-length start-day">
+    <div class="calendar calendar--month-length calendar--start-day">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
