--- a/src/index.html
+++ b/src/index.html
@@ -16,3 +16,36 @@
     <h1>Calendar</h1>
   </body>
 </html>
+<div class="calendar calendar--start-day-sun calendar--month-length-31">
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+  <div class="calendar__day"></div>
+</div>
